@@ -11,6 +11,7 @@
     V arrows.
  9. Fix blurry arrows in url navigator.
 10. Set menu palette.
+11. Add option to use darkened background colour for menuitem selection.
 
 0.59.6
 ------
